--- a/src/Pages/topbar.css
+++ b/src/Pages/topbar.css
@@ -2,7 +2,7 @@
 .topbar-container {
   width: 100%;
   margin: 0;
-  background-color: #ffe468; /* Bootstrap Primary Color */
+  background-color: #110055; /* Bootstrap Primary Color */
 }
 
 .topbar-inner {
