--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -6,19 +6,22 @@
 .about-start,
 .about-end {
   padding: 30px;
-  background-color: yellow; /* Primary color */
+  background-color: #D9D9D9;
+  /* Primary color */
 }
 
 .about-start h1,
 .about-end h1 {
-  font-size: 2rem;
-  font-weight: bolder;
-  color: black;
+  font-family: Tahoma;
+  font-size: 40px;
+  font-weight: 700px;
+  line-height: 48.28px;
+  color: #110055;
 }
 
 .about-start p,
 .about-end p {
-  color: white;
+  color: #110055;
 }
 
 .about-start .btn,
@@ -50,7 +53,7 @@ textarea.form-control {
 }
 
 .btn-primary {
-  background-color: #007bff;
+  background-color: #110055;
   border: none;
   color: white;
 }
@@ -58,7 +61,7 @@ textarea.form-control {
 /* Button Hover Effects */
 .btn-secondary:hover,
 .btn-primary:hover {
-  background-color: #0056b3;
+  background-color: #110055;
   color: white;
 }
 
@@ -82,22 +85,27 @@ textarea.form-control {
 
 .about-start,
 .about-end {
-    background: url(../Images/about-bg.jpg) center center no-repeat;
+    
     /* background-size: contain; */
     background-size: cover;
     transition: .5s;
 }
-
+.position-absolute{
+  padding: 50px;
+  background-color:  #110055;
+  height: 635px;
+  width: 635px;
+}
 @media (min-width: 992px) {
     .about-start {
         position: relative;
-        margin-right: -90px;
+        margin-right: 0px;
         z-index: 1;
     }
 
     .about-end {
         position: relative;
-        margin-left: -90px;
+        margin-left: 0px;
         z-index: 1;
     }
 }
