--- a/src/Pages/navbar.css
+++ b/src/Pages/navbar.css
@@ -1,12 +1,24 @@
-.navbar {
-  width: 100%;
+.logo {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  background-color: white;
+  transition: transform 0.3s ease;
+}
+
+.logo:hover {
+  transform: scale(1.1);
 }
 
 .navbar-brand h1 {
   font-size: 1.5rem;
   font-weight: bold;
-  
-  
+  transition: opacity 0.3s ease;
+}
+
+.navbar-brand h1 {
+  display: inline-block;
+  white-space: nowrap;
 }
 
 .nav-item {
@@ -24,9 +36,4 @@
 
 .navbar-toggler-icon {
   background-color: #fff;
-}
-.logo{
- 
-  height: 50px;
-  width: 50px;
 }
