--- a/src/Pages/TeamCards.css
+++ b/src/Pages/TeamCards.css
@@ -40,7 +40,7 @@
     bottom: -20px;
     left: 0;
     right: 0;
-    background: url('../Images/team.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.7);
+    background: url('/Images/team.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.7);
     padding: 0.5rem;
     color: #fff;
     text-align: center;
@@ -54,7 +54,7 @@
     left: 40px;
     right: 40px;
     bottom: 0;
-    background: url('../Images/team.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.7);
+    background: url('/Images/team.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.7);
     color: #fff;
     opacity: 0;
     display: flex;
