--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -1,12 +1,8 @@
 /* About Section Styles */
-
-
-
-
 .about-start,
 .about-end {
-  padding: 30px;
-  background-color: #D9D9D9;
+  padding: 100px;
+  background-color: #fafafa;
   /* Primary color */
 }
 
@@ -16,12 +12,12 @@
   font-size: 40px;
   font-weight: 700px;
   line-height: 48.28px;
-  color: #110055;
+  color: #0b5079;
 }
 
 .about-start p,
 .about-end p {
-  color: #110055;
+  color: #0b5079;
 }
 
 .about-start .btn,
@@ -53,7 +49,7 @@ textarea.form-control {
 }
 
 .btn-primary {
-  background-color: #110055;
+  background-color: #0b5079;
   border: none;
   color: white;
 }
@@ -61,7 +57,7 @@ textarea.form-control {
 /* Button Hover Effects */
 .btn-secondary:hover,
 .btn-primary:hover {
-  background-color: #110055;
+  background-color: #0b5079;
   color: white;
 }
 
@@ -90,22 +86,31 @@ textarea.form-control {
     background-size: cover;
     transition: .5s;
 }
-.position-absolute{
-  padding: 50px;
-  background-color:  #110055;
-  height: 635px;
-  width: 635px;
+.position-absolute {
+  padding: 0px 0px 0px 90px; /* 10px on left, right, and top; 50px on bottom */
+  background-color: #0b5079;
+  height: 610px;
+  width: 610px;
 }
+
+
+.position-absolutee {
+  padding: 0px 90px 0px 0px; /* 10px on left, right, and top; 50px on bottom */
+  background-color: #0b5079;
+  height: 610px;
+  width: 610px;
+}
+
 @media (min-width: 992px) {
     .about-start {
         position: relative;
-        margin-right: 0px;
+        margin-right: -90px;
         z-index: 1;
     }
 
     .about-end {
         position: relative;
-        margin-left: 0px;
+        margin-left: -90px;
         z-index: 1;
     }
 }
