--- a/src/Pages/Hero.css
+++ b/src/Pages/Hero.css
@@ -8,12 +8,12 @@ html, body {
 }
 
 .bg-hero {
-    background-image: url('../Images/hero.jpg'); 
+    background-image: url('../Images/heroo.jpg'); 
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     justify-content: flex-start;
     align-items: center;
