--- a/src/Pages/call.css
+++ b/src/Pages/call.css
@@ -1,26 +1,32 @@
 .bg-call-to-action {
-    background: url(../Images/call-to-action.jpg);
-    background-size: cover;
-   
-  
-  }
-  
-  .bg-call-to-action h1 {
-    color: rgb(8, 8, 8);
-    font-weight: 900;
-  }
-  
-  .bg-call-to-action p {
-    color: #080808;
-    font-weight: 900;
-  }
-  
-  .bg-call-to-action a.btn {
-    color: rgb(21, 20, 20);
-    background-color: #6c757d; /* Secondary button color */
-  }
-  
-  .bg-call-to-action a.btn:hover {
-    background-color: #555555; /* Darker hover color */
-  }
-  
+  background: url(../Images/image.png);
+  background-size: cover;
+  background-position: center;
+  height: 600px;
+}
+
+.bg-call-to-action h1 {
+  color: rgb(8, 8, 8);
+  font-weight: 900;
+  font-size: 2.5rem; /* Reduced font size */
+}
+
+.bg-call-to-action p {
+  color: #080808;
+  font-weight: 900;
+  font-size: 1.2rem; /* Reduced font size */
+}
+
+.bg-call-to-action a.btn {
+  color: rgb(21, 20, 20);
+  background-color: #6c757d; /* Secondary button color */
+}
+
+.bg-call-to-action a.btn:hover {
+  background-color: #555555; /* Darker hover color */
+}
+
+/* Custom alignment for the right side */
+.custom-right-align {
+  margin-right: 1px; /* Adjust margin to move closer to the right edge */
+}
