--- a/src/Pages/Service.css
+++ b/src/Pages/Service.css
@@ -1,8 +1,8 @@
 :root {
-    --primary: #FFE468;
-    --secondary: #8CC641;
-    --light: #F2F2F2;
-    --dark: #272630;
+    --primary: #0b5079;
+    --secondary: #020f17;
+    --light: #dc2121;
+    --dark: #eeeef1;
   }
   
 
@@ -11,14 +11,14 @@
 
 .service-item,
 .contact-item {
-  background: url("/Images/service.jpg") top center no-repeat;
+  background: url("../Images/imagecopy.png") top center no-repeat;
   background-size: cover;
   transition: 0.5s;
 }
 
 .service-item:hover,
 .contact-item:hover {
-  background: url("/Images/service.jpg") bottom center no-repeat;
+  background: url("../Images/imagecopy.png") bottom center no-repeat;
   background-size: cover;
 }
 
