--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -3,8 +3,10 @@
 .about-start,
 .about-end {
   padding: 100px;
-  background-color: rgba(250, 250, 250, 0.7); /* Transparent white background */
-  /* Primary color with transparency */
+  background: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1)
 }
 
 .about-start h1,
@@ -18,7 +20,7 @@
 
 .about-start p,
 .about-end p {
-  color: #0b5079;
+  color: #04334f;
 }
 
 .about-start .btn,
